[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "IEKit"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

keywords = [
    "iekit",
    "autonomy",
    "agent",
]

classifiers = [
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]

[[tool.poetry.packages]]
include = "packages"


[tool.poetry.dependencies]
python = "<3.11,>=3.10"
open-autonomy = "==0.21.8"
requests = "<2.32.5,>=2.28.1"
py-multibase = "==1.0.3"
py-multicodec = "==0.2.1"
py-eth-sig-utils = "*"
grpcio = "==1.53.0"
asn1crypto = "<1.5.0,>=1.4.0"
open-aea-ledger-ethereum = "==2.0.8"
open-aea-ledger-cosmos = "==2.0.8"
protobuf = "<4.25.0,>=4.21.6"
hypothesis = "==6.21.6"
open-aea-test-autonomy = "==0.21.8"
web3 = "<8,>=7.0.0"
ipfshttpclient = "==0.8.0a2"
open-aea-cli-ipfs = "==2.0.8"
aiohttp = "<4.0.0,>=3.8.5"
certifi = "==2021.10.8"
multidict = "*"
ecdsa = ">=0.15"
eth_typing = "*"
hexbytes = "==1.3.0"
packaging = "*"
pytz = "==2022.2.1"
typing-extensions = "<=4.13.2,>=3.10.0.2"
toml = "==0.10.2"
eth-utils = "==5.3.0"
eth-abi = "==5.2.0"
pycryptodome = "==3.20.0"
pytest = "==7.4.4"
jsonschema = "<4.4.0,>=4.3.0"
openapi-core = "==0.15.0"
openapi-spec-validator = "<0.5.0,>=0.4.0"
pydantic = "==2.9.2"
multiaddr = "==0.0.9"
setuptools = "<=81.0.0"

# Additional IEKit-specific deps
Authlib = "==1.2.0"
cryptography = "==44.0.2"
dag-cbor = "==0.2.2"
jsonpatch = "==1.32"
pre-commit = "==3.0.1"
py-ecc = "==8.0.0"
openai = "==1.93.0"
bases = "==0.3.0"
typing_validation = "==1.1.0"
tweepy = "==4.14.0"
twitter_text_parser = "==3.0.0"
farcaster = "==0.7.12"
rich = "==14.0.0"
ipykernel = "*"
click = "==8.2.1"
pbr = "*"
marshmallow = "<4.0.0"

[tool.poetry.dependencies.tomte]
version = "==0.4.0"
extras = ["cli", "tests"]