[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "IEKit"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

keywords = [
    "iekit",
    "autonomy",
    "agent",
]

classifiers = [
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[[tool.poetry.packages]]
include = "packages"


[tool.poetry.dependencies]
python = ">=3.10,<3.15"
open-autonomy = "==0.21.12rc4"
requests = ">=2.28.1,<2.33.0"
py-multibase = "==1.0.3"
py-multicodec = "==0.2.1"
py-eth-sig-utils = "*"
grpcio = "==1.78.0"
asn1crypto = "<1.5.0,>=1.4.0"
open-aea-ledger-ethereum = "==2.1.0rc6"
open-aea-ledger-cosmos = "==2.1.0rc6"
protobuf = ">=5,<6"
hypothesis = "==6.21.6"
open-aea-test-autonomy = "==0.21.12rc4"
web3 = "<8,>=7.0.0"
ipfshttpclient = "==0.8.0a2"
open-aea-cli-ipfs = "==2.1.0rc6"
aiohttp = "<4.0.0,>=3.8.5"
certifi = "*"
multidict = "*"
ecdsa = ">=0.15"
eth_typing = "*"
hexbytes = "*"
packaging = "*"
pytz = "==2022.2.1"
typing-extensions = ">=3.10.0.2"
toml = "==0.10.2"
eth-utils = "==5.3.0"
eth-abi = "==5.2.0"
pycryptodome = "==3.20.0"
pytest = "==8.4.2"
jsonschema = ">=4.23.0,<5.0.0"
openapi-core = "==0.22.0"
openapi-spec-validator = "<0.8.0,>=0.7.0"
pydantic = "==2.12.5"
multiaddr = "==0.0.9"
setuptools = "<=81.0.0"

# Additional IEKit-specific deps
Authlib = "==1.6.9"
cryptography = "==44.0.2"
dag-cbor = "==0.2.2"
jsonpatch = "==1.32"
pre-commit = "==3.0.1"
py-ecc = "==8.0.0"
openai = "==1.93.0"
bases = "==0.3.0"
typing_validation = "==1.1.0"
tweepy = "==4.14.0"
twitter_text_parser = "==3.0.0"
farcaster = "==0.7.12"
rich = "==14.0.0"
ipykernel = "*"
click = ">=8.1.0,<9"
pbr = "*"
marshmallow = "<4.0.0"

[tool.poetry.dependencies.tomte]
version = "==0.6.1"
extras = ["cli", "tests"]